--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+# version: '3.8'
+
 services:
   backend:
     build: ./php-backend
@@ -37,7 +39,7 @@ services:
       - "3307:3306"
     volumes:
       - db-data:/var/lib/mysql
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/init.sql:/docker-entrypoint-initdb.d/01-init.sql
     networks:
       - zt-network
 
