--- a/dist-frontend/nginx.conf
+++ b/dist-frontend/nginx.conf
@@ -2,11 +2,11 @@ server {
     listen 80;
 
     # Serve angular app
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/browser;
     index index.html;
 
     # Fallback to index.html for SPA routing
-    location / {
+    location /browser {
         try_files $uri $uri/ /index.html;
     }
 
