--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# version: '3.8'
+version: '3.8'
 
 services:
   backend:
@@ -21,6 +21,8 @@ services:
   frontend:
     build: ./dist-frontend
     container_name: frontend
+    depends_on:
+      - backend
     ports:
       - "8080:80"
     networks:
